# cs2-masked-inspect-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  tests.yml
src/: crc32.rs  error.rs  gen_code.rs  inspect_link.rs  lib.rs  models.rs
src/proto/: mod.rs  reader.rs  writer.rs
tests/: inspect_link_test.rs
